--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -9,9 +9,9 @@ RUN pip install -U web.py
 RUN pip install -U pathlib
 
 # Bundle app source
-COPY server/server.py /src/server.py
-COPY server/user_data.xml /src/user_data.xml
+#COPY server/server.py /src/server.py
+#COPY server/user_data.xml /src/user_data.xml
 
 
-EXPOSE  8080
-CMD ["python", "/src/server.py"]
+#EXPOSE  8080
+#CMD ["python", "/src/server.py"]
