--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -8,9 +8,9 @@ RUN pip install --upgrade pip
 RUN pip install -U web.py
 RUN pip install -U pathlib
 
-# Bundle app source
-#COPY server/server.py /src/server.py
-#COPY server/user_data.xml /src/user_data.xml
+ Bundle app source
+COPY server/server.py /src/server.py
+COPY server/user_data.xml /src/user_data.xml
 
 
 #EXPOSE  8080
